Remove lombok Builder annotation use (#1463)
* remove lombok builder annotation from project

* fix typo

* remove unused imports

* misc cleanup